Bug fix: IE was left aligning all club counts in the club overview report

--- a/app/css/reporting.scss
+++ b/app/css/reporting.scss
@@ -78,7 +78,6 @@ reporting, reporting-devices {
     font-weight: normal;
     &.right {
       position: relative;
-      left: 0;
       top: rem-calc(-26);
     }
   }
